frontend/src/components/home/home.css
.home__container {
    row-gap: 7rem;
}

.home__content {
    grid-template-columns: 116px 1.05fr 1fr;
    padding-top: 5.5rem;
    column-gap: 2rem;
    align-items: center;
}

.home__social {
    display: grid;
    grid-template-columns: max-content;
    row-gap: 1.5rem;
}

.home__social-icon svg {
    font-size: 1.25rem;
    color: grey;
    transition: color 0.15s ease, transform 0.15s ease;
}

.home__social-icon:hover svg {
    color: var(--title-color-dark);
    transform: scale(2);
}
 
.home__title {
    font-size: var(--big-font-size);
    margin-bottom: var(--mb-0-25);
}

.home__hand {
    width: 38px;
    height: 38px;
    margin-left: 0.4rem;
    transition: transform 0.3s ease;
    /* Add transition for smooth animation */
}

.home__hand:hover {
    animation: wave 1s ease-in-out infinite alternate;
    /* Animation properties */
}

@keyframes wave {
    0% {
        transform: rotate(0deg);
    }

    25% {
        transform: rotate(-30deg);
    }

    50% {
        transform: rotate(30deg);
    }

    75% {
        transform: rotate(-30deg);
    }

    100% {
        transform: rotate(0deg);
    }
}

.home__subtitle {
    position: relative;
    font-size: var(--h3-font-size);
    padding-left: 5.4rem;
    font-weight: var(--font-normal);
    margin-bottom: var(--mb-1);
    /* width: 400px; */
}

.home__subtitle::before {
    content: "";
    position: absolute;
    width: 80px;
    height: 1px;
    background-color: var(--text-color);
    left: 0;
    top: 1rem;
}

/* .home__subtitle p {
    background-color: rebeccapurple;
    width: 310px;
} */

.home__description {
    max-width: 400px;
    margin-bottom: var(--mb-3);
}

.home__img {
    background: url(../../assets//profile.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    box-shadow: inset 0 0 0 9px var(--border-shadow-color);
    order: 1;
    justify-self: center;
    width: 300px;
    height: 300px;
    animation: profile__animate 8s ease-in-out infinite; 
    /* Add delay if needed: animation-delay: 1s; or else add 1s after infinite*/
}

@keyframes profile__animate {
    0% {
        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
    }

    50% {
        border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
    }

    100% {
        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
    }
}

.home__scroll {
    margin-left: 9.25rem;
}

.wheel {
    animation: scroll 2s ease infinite;
}

@keyframes scroll {
    0% {
        transform: translateY(0);
    }

    30% {
        transform: translateY(3.75rem);
    }
}

.home__scroll-name {
    color: var(--title-color);
    font-weight: var(--font-medium);
    margin-right: var(--mb-0-25);
    margin-left: 2px;
}

.home__scroll-arrow svg {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.25rem;
    color: var(--title-color);
}

@keyframes levitate {

    0%,
    100% {
        transform: translateY(-0.5rem);
    }

    50% {
        transform: translateY(0.5rem);
    }
}

.home__button {
    animation: levitate 3s ease-in-out infinite;
    /* Adjust duration and easing as needed */
}

.home__button:hover {
    animation-play-state: paused;
    /* Pause the animation on hover */
}

/*=============== BREAKPOINTS ===============*/
/* For large devices */
@media screen and (max-width: 992px) {
    .home__content {
        grid-template-columns: 100px repeat(2, 1fr);
        column-gap: 1.25rem;
    }

    .home__hand {
        width: 26px;
        height: 26px;
    }

    .home__subtitle {
        padding-left: 3.75rem;
        margin-bottom: var(--mb-1);
    }

    .home__subtitle::before {
        width: 42px;
        top: 0.8rem;
    }

    .home__description {
        max-width: initial;
        margin-bottom: var(--mb-2-5);
    }

    .home__img {
        width: 250px;
        height: 250px;
        box-shadow: inset 0 0 0 8px var(--border-shadow-color);
    }

    .home__scroll {
        margin-left: 7.5rem;
    }
}

/* For medium devices */
@media screen and (max-width: 768px) {
    .home__content {
        /* grid-template-columns: 1.5fr 3fr; */
        padding-top: 3.5rem;
    }

    .home__img {
        order: initial;
        justify-self: initial;
    }

    /* .home__data {
        grid-column: 1/3;
    } */

    .home__img {
        box-shadow: inset 0 0 0 6px var(--border-shadow-color);
        width: 200px;
        height: 200px;
    }

    .home__scroll {
        display: none;
    }

    .home__social {
        row-gap: 2rem;
        justify-self: center;
    }
}

@media screen and (max-width: 576px) {
    .home__content {
        padding-top: 1%;
        grid-template-columns: 1fr;
        /* Adjusting grid layout for smaller devices */
        justify-content: center;
        /* Centering grid items horizontally */
        text-align: center;
        /* Centering text content */
    }

    .home__img {
        width: 180px;
        height: 180px;
        margin: 0 auto;
        /* Centering the image horizontally */
    }

    .home__hand {
        width: 22px;
        height: 22px;
    }

    .home__subtitle {
        padding-left: 0;
        /* Resetting padding */
        text-align: center;
        /* Centering text content */
        margin-bottom: var(--mb-1);
        /* Maintaining margin */
    }

    .home__subtitle::before {
        display: none;
        /* Hide the pseudo-element */
    }

    .home__description {
        max-width: initial;
        /* Resetting max-width */
        margin-bottom: var(--mb-3);
        /* Maintaining margin */
    }

    .home__scroll {
        display: none;
        /* Hide the scroll element */
    }

    .home__social {
        display: grid;
        grid-auto-flow: column;
        row-gap: 1rem;
        justify-self: center;
        column-gap: 4rem;
    }
}


/* For small devices */
@media screen and (max-width: 350px) {
    .home__img {
        width: 180px;
        height: 180px;
    }

    .home__hand {
        width: 22px;
        height: 22px;
    }

    .home__social {
        column-gap: 3rem;
    }
}

/* ANIMATION CSS */
.blinking-cursor {
    font-weight: bold;
}

.blinking-cursor.animate {
    animation: blink 1s infinite;
}

@keyframes blink {
    0% {
        opacity: 1;
    }

    50% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

